--- a/package.json
+++ b/package.json
@@ -18,13 +18,11 @@
     "url": "https://github.com/fixate/angular-social-links/issues"
   },
   "homepage": "https://github.com/fixate/angular-social-links",
-  "dependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-coffee": "^0.10.1",
-    "grunt-contrib-watch": "^0.6.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-bump": "0.0.14"
+    "grunt-bump": "0.0.14",
+    "grunt-contrib-coffee": "^0.10.1",
+    "grunt-contrib-watch": "^0.6.1"
   }
 }
