--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "url": "git://github.com/fixate/angular-social-links.git"
   },
   "authors": [
-    "Stan Bondi"
+    "Stan Bondi",
+		"Larry Botha"
   ],
   "license": "MIT",
   "bugs": {
